Clear topology failures no longer needed